Update Header and MirroredHeader CSS: Adjust image and wrapper heights from 45vh to 50vh for improved responsiveness. Remove unnecessary padding in the wrapper for better layout on smaller screens. Ensure consistent height calculations across components to enhance visual consistency and user experience.

--- a/landing/src/components/Sections/Header/Header.module.css
+++ b/landing/src/components/Sections/Header/Header.module.css
@@ -97,14 +97,14 @@
     .imageWrapper {
         width: auto;
         justify-content: center;
-        height: calc(min(45vh, 100vh - 350px));
+        height: calc(min(50vh, 100vh - 350px));
         display: flex;
         align-items: center;
     }
 
     .img {
-        height: calc(min(45vh, 100vh - 350px));
-        width: calc((min(45vh, 100vh - 350px)) * 295 / 420);
+        height: calc(min(50vh, 100vh - 350px));
+        width: calc((min(50vh, 100vh - 350px)) * 295 / 420);
         max-width: 90vw;
         object-fit: cover;
     }
@@ -149,18 +149,14 @@
 
 @media (max-width: 768px) {
 
-    .wrapper {
-        padding-top: 120px;
-    }
-
 
     .imageWrapper {
-        height: min(60vh, calc(100vw * 420/295)); 
+        height: min(50vh, calc(100vw * 420/295)); 
     }
 
     .img {
-        height: min(60vh, calc(100vw * 420/295));
-        width: calc(min(70vh, calc(100vw * 420/295)) * 295/420);
+        height: min(50vh, calc(100vw * 420/295));
+        width: calc(min(50vh, calc(100vw * 420/295)) * 295/420);
         max-width: 90vw;
         object-fit: cover;
     }
